fixed new session handling; added spacing for longer questions

--- a/styles/pad.css
+++ b/styles/pad.css
@@ -98,6 +98,10 @@
   margin-right: 2.0rem;
 }
 
+.mgn-r-1-0 {
+  margin-right: 1.0rem;
+}
+
 .mgn-r-0-5 {
   margin-right: 0.5rem;
 }
